--- a/views/singlePost.handlebars
+++ b/views/singlePost.handlebars
@@ -26,6 +26,10 @@
             <p class="card-text">{{{linkify response.post.description}}}</p>
             <p><strong>Author: </strong> {{response.post.name}} </p>
             <p>Posted: {{setTime response.post.createdAt}}</p>
+                        <div class = 'voting {{response.post.id}}'>
+            <i class= "hvr-float like fas fa-carrot fa-lg" value = '{{response.post.id}}'></i>
+             <i class= "hvr-sink dislike far fa-frown-open fa-lg" value = '{{response.post.id}}'></i>
+          </div>
             <hr>
             <p><strong>Comments:</strong></p>
             {{#each response.post.comment}}
@@ -34,6 +38,7 @@
             {{!-- creates a tag links for any urls that are detected --}}
             <p> {{{linkify this.text}}}</p>
             {{/each}}
+            
 
           </div>
         </div>
