--- a/public/styles/login.css
+++ b/public/styles/login.css
@@ -4,6 +4,18 @@
   margin-right:5px;
 }
 
+.like:hover {
+  color:orange;
+  box-shadow: 0 0 1px rgba(0, 0, 0, 0);
+  -webkit-transition-duration: 0.3s;
+  transition-duration: 0.3s;
+  -webkit-transform: scale(1.1);
+  transform: scale(2.1);
+}
+.dislike:hover {
+  color:red;
+}
+
 .modal {
     display: none; /* Hidden by default */
     position: fixed; /* Stay in place */
