--- a/views/singlePost.handlebars
+++ b/views/singlePost.handlebars
@@ -27,7 +27,7 @@
             <p><strong>Author: </strong> {{response.post.name}} </p>
             <p>Posted: {{setTime response.post.createdAt}}</p>
                         <div class = 'voting'>
-            <i class= "hvr-float like fas fa-carrot fa-lg" value = '{{response.post.id}}'></i>
+            <i class= "like fas fa-carrot fa-lg" value = '{{response.post.id}}'></i>
              <i class= "hvr-sink dislike far fa-frown-open fa-lg" value = '{{response.post.id}}'></i>
           </div>
             <hr>
