--- a/views/singlePost.handlebars
+++ b/views/singlePost.handlebars
@@ -17,7 +17,7 @@
       {{>sideCategory}}
 
       {{!-- Show One Post. --}}
-      <div class="col-8">
+      <div class="col-8 offset-2">
         <h2 class="text-center topPost">For The Curious...</h2>
 
         <div class="card mt-4">
@@ -62,7 +62,10 @@
 </div>
 {{!-- End singlePost --}}
 
-<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-<!-- Microlink SDK Vanilla/UMD bundle -->
+
 <link rel="stylesheet" href="/styles/login.css" media="screen" title="no title" charset="utf-8">
+<link rel="stylesheet" href="/styles/sidenav.css" media="screen" title="no title" charset="utf-8">
+
+<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+<script src="/js/sidenav.js"></script>
 <script src="/js/comment.js"></script>
