--- a/views/post.handlebars
+++ b/views/post.handlebars
@@ -18,7 +18,7 @@
       {{>sideCategory}}
 
       {{!-- Enter Post Form --}}
-      <div class="col-8">
+      <div class="col-8 offset-2">
         <h3 class="text-center topPost">Share Your Thoughts</h3>
         <form class="clearfix mb-4 mt-4" action="POST">
           <div class="form-group mb-4">
@@ -48,5 +48,8 @@
   {{!-- End Body --}}
 </div>
 
+<link rel="stylesheet" href="/styles/sidenav.css" media="screen" title="no title" charset="utf-8">
+
 <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+<script src="/js/sidenav.js"></script>
 <script src="/js/post.js"></script>
