move sidenav up and use arrow

--- a/views/partials/sideCategory.handlebars
+++ b/views/partials/sideCategory.handlebars
@@ -6,7 +6,7 @@
     <ul class="sidebar-nav">
       {{!-- Collapsible Button --}}
       <li class="sidebar-brand"><a href="#menu-toggle" id="menu-toggle">
-          <i class="fa fa-bars" aria-hidden="true"></i></a>
+          <i class="fas fa-angle-double-right" aria-hidden="true"></i></a>
       </li>
       {{!-- <li class="hvr-sweep-to-right"> --}}
       <li><a href="/"><i class="fas fa-carrot" aria-hidden="true"></i>
