--- a/views/profile.handlebars
+++ b/views/profile.handlebars
@@ -31,7 +31,7 @@
                 data-target="#contactInfo"
               >
                 <span class="infoText"> Contact Me</span>
-                <span class="h5 infoIcon mb-0"
+                <span class="h5 mb-0"
                   ><i class="fa fa-chevron-up"></i
                 ></span>
               </button>
