--- a/views/singlePost.handlebars
+++ b/views/singlePost.handlebars
@@ -21,55 +21,59 @@
         <h2 class="text-center topPost">For The Curious...</h2>
 
         <div class="container">
-        <div class="card mt-4">
-          <h5 class="card-header">{{{linkify response.post.text}}}</h5>
-          <div class="card-body">
-            <p class="card-text">{{{linkify response.post.description}}}</p>
-            <p><strong>Author: </strong> {{response.post.name}} </p>
-            <p>Posted: {{setTime response.post.createdAt}}</p>
-                        <div class = 'voting'>
-            <i class= "like fas fa-carrot fa-lg" value = '{{response.post.id}}'></i>
-             <i class= "hvr-sink dislike far fa-frown-open fa-lg" value = '{{response.post.id}}'></i>
+          <div class="card mt-4 postCard">
+            <h5 class="card-header">{{{linkify response.post.text}}}</h5>
+            <div class="card-body">
+              <p class="card-text">{{{linkify response.post.description}}}</p>
+              <p><strong>Author: </strong> {{response.post.name}} </p>
+              <p>Posted: {{setTime response.post.createdAt}}</p>
+              <div class='voting'>
+                <i class="like fas fa-carrot fa-lg" value='{{response.post.id}}'></i>
+                <i class="hvr-sink dislike far fa-frown-open fa-lg" value='{{response.post.id}}'></i>
+              </div>
+            </div>
           </div>
-            <hr>
-            <p><strong>Comments:</strong></p>
-            {{#each response.post.comment}}
-            <p>{{this.name}}</p>
-            <p>Time: {{setTime this.createdAt}}</p>
-            {{!-- creates a tag links for any urls that are detected --}}
-            <p> {{{linkify this.text}}}</p>
+          
+
+
+  {{!-- Comments --}}
+          {{#each response.post.comment}}
+          <div class="comment-bubble tri-right border round btm-left-in">
+            <div class="talktext">
+              <p>{{this.name}}</p>
+              <p>Posted: {{setTime this.createdAt}}</p>
+              <p> {{{linkify this.text}}}</p>
+            </div>
+          </div>
             {{/each}}
-            
 
-      
-        
 
-        {{!-- Enter Comment --}}
-        <div id="myModal" class="modal">
-          <div class="modal-content">
-            <span class="close">&times;</span>
-            <a href="/login">Click here to Login</a>
+          {{!-- Enter Comment --}}
+          <div id="myModal" class="modal">
+            <div class="modal-content">
+              <span class="close">&times;</span>
+              <a href="/login">Click here to Login</a>
+            </div>
           </div>
+
+          <form class="clearfix mb-4 mt-4" action="POST">
+            <div class="form-group mb-4">
+              <label id="comment" class="text-light" for="comment-description">
+                <h3>Add a Comment</h3>
+              </label>
+              <textarea class="form-control" id="comment-description" rows="3" aria-describedby="commet-description"
+                placeholder="Enter Comment"></textarea>
+            </div>
+            <button id="submit" post="{{response.post.id}}" class="btn btn-primary float-right">Submit</button>
+          </form>
         </div>
+        {{!-- End Show One Post --}}
 
-        <form class="clearfix mb-4 mt-4" action="POST">
-          <div class="form-group mb-4">
-            <label id="comment" class="text-light" for="comment-description">
-              <h3>Add a Comment</h3></label>
-            <textarea class="form-control" id="comment-description" rows="3"
-              aria-describedby="commet-description" placeholder="Enter Comment"></textarea>
-          </div>
-          <button id="submit" post="{{response.post.id}}" class="btn btn-primary float-right">Submit</button>
-        </form>
-      </div>
-      {{!-- End Show One Post --}}
-    </div>
-  </div>
-  {{!-- End Body --}}
+      {{!-- End Body --}}
 
-<link rel="stylesheet" href="/styles/login.css" media="screen" title="no title" charset="utf-8">
-<link rel="stylesheet" href="/styles/sidenav.css" media="screen" title="no title" charset="utf-8">
+      <link rel="stylesheet" href="/styles/login.css" media="screen" title="no title" charset="utf-8">
+      <link rel="stylesheet" href="/styles/sidenav.css" media="screen" title="no title" charset="utf-8">
 
-<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-<script src="/js/sidenav.js"></script>
-<script src="/js/comment.js"></script>
+      <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+      <script src="/js/sidenav.js"></script>
+      <script src="/js/comment.js"></script>
