--- a/views/singlePost.handlebars
+++ b/views/singlePost.handlebars
@@ -41,7 +41,7 @@
           <div class="comment-bubble tri-right border round btm-left-in">
               <p>{{this.name}}</p>
               <p>Posted: {{setTime this.createdAt}}</p>
-              <p> {{{linkify this.text}}}</p>
+              <p style= "overflow-wrap:break-word" > {{{linkify this.text}}}</p>
           </div>
             {{/each}}
 
