--- a/public/styles/hover.css
+++ b/public/styles/hover.css
@@ -1603,7 +1603,7 @@
   left: 0;
   right: 0;
   bottom: 0;
-  background: #2098D1;
+  background: #7B90C2;
   border-radius: 100%;
   -webkit-transform: scale(0);
   transform: scale(0);
@@ -1631,7 +1631,7 @@
   box-shadow: 0 0 1px rgba(0, 0, 0, 0);
   position: relative;
   overflow: hidden;
-  background: #2098D1;
+  background: #7B90C2;
   -webkit-transition-property: color;
   transition-property: color;
   -webkit-transition-duration: 0.3s;
