readme prettier code

--- a/public/styles/profile.css
+++ b/public/styles/profile.css
@@ -2,7 +2,7 @@
 @import url("https://fonts.googleapis.com/css?family=Abel");
 
 .cardBg {
-  background-color :#f0f8ff;
+  background-color: #f0f8ff;
 }
 .cardDarkBg {
   background-color: #cce7ff;
@@ -19,7 +19,7 @@
   transform: translate(-50%, -50%);
   top: 100%;
   z-index: 2;
-  color:#0088ff;
+  color: #0088ff;
   width: 145px;
   height: 38px;
   transition: all ease 0.35s;
@@ -28,16 +28,16 @@
 .contactButton .infoIcon {
   display: none;
 }
-.contactButton[aria-expanded=true] {
+.contactButton[aria-expanded="true"] {
   left: 90%;
   transform: translate(-90%, -50%);
   width: 52px;
   height: 52px;
 }
-.contactButton[aria-expanded=true] .infoText {
+.contactButton[aria-expanded="true"] .infoText {
   display: none;
 }
-.contactButton[aria-expanded=true] .infoIcon {
+.contactButton[aria-expanded="true"] .infoIcon {
   display: inline-flex;
   align-items: center;
   justify-content: center;
@@ -46,5 +46,5 @@
   width: 30px;
 }
 .card-body {
-    width: 200%;
+  width: 200%;
 }
