--- a/views/partials/nav.handlebars
+++ b/views/partials/nav.handlebars
@@ -1,12 +1,10 @@
-
 <nav class="navbar fixed-top navbar-expand-md navbar-light bg-light">
 
   {{!-- Logo --}}
   <a class="navbar-brand" href="/"><img src="/images/rabbit.png"> Down The Rabbit Hole </a>
   {{!-- Collapsible Button --}}
-  <button class="navbar-toggler" type="button" data-toggle="collapse"
-    data-target=".navbarContent" aria-controls="navbarContent"
-    aria-expanded="false" aria-label="Toggle navigation">
+  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target=".navbarContent"
+    aria-controls="navbarContent" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
 
@@ -14,8 +12,8 @@
   <div id="nav-category" class="collapse navbar-collapse navbar-toggleable-md navbarContent">
     <ul class="navbar-nav mr-auto">
       <div class="dropdown">
-        <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button"
-          aria-haspopup="true" aria-expanded="false">Category
+        <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true"
+          aria-expanded="false">Category
           <span class="sr-only">Category Dropdown</span></a>
         <div class="dropdown-menu">
           <a class="dropdown-item" href="/">All</a>
@@ -29,27 +27,26 @@
 
   {{!-- Collapsible Content Right --}}
   <div class="collapse navbar-collapse navbarContent">
-		<ul class="navbar-nav ml-auto">
+    <ul class="navbar-nav ml-auto">
       <li id="postLink" class="nav-item">
         <a class="nav-link hvr-underline-from-center " href="/post">Create Post
           <i class="fas fa-plus"></i><span class="sr-only">(current)</span></a>
       </li>
-            <li id="popularPosts" class="nav-item">
+      <li id="popularPosts" class="nav-item">
         <a class="nav-link hvr-underline-from-center " href="/popular">Most Popular Posts
           <span class="sr-only">(current)</span></a>
       </li>
-    
-    
+
+
       <form class="form-inline my-2 my-lg-0">
         <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
-        <button href= '#' id="search-btn" class="btn btn-outline-dark my-2 my-sm-0"
-          type="submit">Search</button>
+        <button href='#' id="search-btn" class="btn btn-outline-dark my-2 my-sm-0" type="submit">Search</button>
       </form>
 
-		  <li class="nav-item">
-        <a id = "logBtn" class="nav-link" href='#' > <span class="sr-only">(current)</span></a>
+      <li class="nav-item">
+        <a id="logBtn" class="nav-link" href='#'> <span class="sr-only">(current)</span></a>
       </li>
-		</ul>
+    </ul>
   </div>
 
 </nav>
