--- a/public/styles/styles.css
+++ b/public/styles/styles.css
@@ -2,24 +2,24 @@
  Common Elements
 ---------------------------- */
 body {
-  background-color: #DCDCDC;
+  background-color: #dcdcdc;
   padding: 0;
   margin: 0;
-  box-sizing:border-box;
+  box-sizing: border-box;
   color: #000;
 }
 
 .bg {
-   background-image: url('/images/bg.svg');
-   background-repeat: repeat;
-   background-position-x: repeat;
+  background-image: url("/images/bg.svg");
+  background-repeat: repeat;
+  background-position-x: repeat;
 }
 
-#duplicate{
-  color:red;
+#duplicate {
+  color: red;
 }
 .speech-bubble {
-  background:	#D3D3D3;
+  background: #d3d3d3;
   opacity: 0.7;
   -webkit-border-radius: 4px;
   border-radius: 4px;
@@ -54,14 +54,16 @@ body {
   -webkit-transition-property: box-shadow, transform;
   transition-property: box-shadow, transform;
 }
-.speech-bubble:hover, .speech-bubble:focus, .speech-bubble:active {
+.speech-bubble:hover,
+.speech-bubble:focus,
+.speech-bubble:active {
   box-shadow: 0 10px 10px -10px rgba(0, 0, 0, 0.5);
 }
-.postCard{
+.postCard {
   margin-bottom: 25px;
 }
 .comment-bubble {
-  background:	#D3D3D3;
+  background: #d3d3d3;
   opacity: 0.7;
   -webkit-border-radius: 4px;
   border-radius: 4px;
@@ -98,7 +100,9 @@ body {
   -webkit-transition-property: box-shadow, transform;
   transition-property: box-shadow, transform;
 }
-.comment-bubble:hover, .comment-bubble:focus, .comment-bubble:active {
+.comment-bubble:hover,
+.comment-bubble:focus,
+.comment-bubble:active {
   box-shadow: 0 10px 10px -10px rgba(0, 0, 0, 0.5);
 }
 .post {
@@ -109,19 +113,21 @@ body {
   color: #000;
 }
 .card {
-  background-color:#F5F5F5;
+  background-color: #f5f5f5;
 }
 .greeting {
-  color:#F0FFFF;
-  font-family: 'Major Mono Display', monospace;
+  color: #f0ffff;
+  font-family: "Major Mono Display", monospace;
   padding-bottom: 1em;
 }
-.topPost, #comment{
-  color: #F0FFFF;
-  font-family: 'Major Mono Display', monospace;
+.topPost,
+#comment {
+  color: #f0ffff;
+  font-family: "Major Mono Display", monospace;
 }
-.createAccount, .signin {
-  font-family: 'Major Mono Display', monospace;
+.createAccount,
+.signin {
+  font-family: "Major Mono Display", monospace;
   color: #000;
 }
 
@@ -143,12 +149,12 @@ a {
 }
 
 .navbar-brand {
-  font-family: 'Barrio', cursive;
+  font-family: "Barrio", cursive;
 }
 
 * {
   -webkit-box-sizing: border-box;
-          box-sizing: border-box;
+  box-sizing: border-box;
 }
 
 .form-signin {
@@ -163,7 +169,6 @@ p {
   color: rgba(31, 79, 236, 0.8);
 }
 
-
 /* ----------------------------
  Category Sidebar Nav
 ---------------------------- */
@@ -177,14 +182,13 @@ p {
 }
 .sidebar-nav ul li {
   width: 140px;
-  padding: .5rem 1rem;
+  padding: 0.5rem 1rem;
 }
 
 /* Main Navbar Category */
 #nav-category {
-	visibility: hidden;
+  visibility: hidden;
 }
-
 
 /* ----------------------------
  404 Not Found
@@ -199,8 +203,8 @@ p {
   left: 50%;
   top: 50%;
   -webkit-transform: translate(-50%, -50%);
-      -ms-transform: translate(-50%, -50%);
-          transform: translate(-50%, -50%);
+  -ms-transform: translate(-50%, -50%);
+  transform: translate(-50%, -50%);
 }
 
 .notfound {
@@ -216,13 +220,13 @@ p {
 }
 
 .notfound .notfound-404 h1 {
-  font-family: 'Montserrat', sans-serif;
+  font-family: "Montserrat", sans-serif;
   position: absolute;
   left: 50%;
   top: 50%;
   -webkit-transform: translate(-50%, -50%);
-      -ms-transform: translate(-50%, -50%);
-          transform: translate(-50%, -50%);
+  -ms-transform: translate(-50%, -50%);
+  transform: translate(-50%, -50%);
   font-size: 252px;
   font-weight: 900;
   margin: 0px;
@@ -232,12 +236,12 @@ p {
   margin-left: -20px;
 }
 
-.notfound .notfound-404 h1>span {
+.notfound .notfound-404 h1 > span {
   text-shadow: -8px 0px 0px #fff;
 }
 
 .notfound .notfound-404 h3 {
-  font-family: 'Cabin', sans-serif;
+  font-family: "Cabin", sans-serif;
   position: relative;
   font-size: 16px;
   font-weight: 700;
@@ -249,7 +253,7 @@ p {
 }
 
 .notfound h2 {
-  font-family: 'Cabin', sans-serif;
+  font-family: "Cabin", sans-serif;
   font-size: 20px;
   font-weight: 400;
   text-transform: uppercase;
@@ -257,8 +261,6 @@ p {
   margin-top: 0px;
   margin-bottom: 25px;
 }
-
-
 
 /* ----------------------------
  Media Responsive
@@ -273,13 +275,13 @@ p {
     font-size: 200px;
   }
   #nav-category {
-	  visibility: hidden;
+    visibility: hidden;
     max-width: 2px;
   }
   #sidenav-category {
-	  visibility: visible;
+    visibility: visible;
   }
-  #search-btn{
+  #search-btn {
     visibility: hidden;
     max-width: 2px;
   }
@@ -294,18 +296,17 @@ p {
     font-size: 200px;
   }
   #nav-category {
-	  visibility: visible;
+    visibility: visible;
     max-width: 100%;
   }
   #sidenav-category {
-	  visibility: hidden;
+    visibility: hidden;
   }
-  #search-btn{
+  #search-btn {
     visibility: visible;
     max-width: 100%;
   }
 }
-
 
 /* Bootstrap grid super extra small ? < 576 px */
 @media only screen and (max-width: 480px) {
@@ -321,10 +322,10 @@ p {
     font-size: 16px;
   }
   #nav-category {
-	  visibility: visible;
+    visibility: visible;
     max-width: 100%;
   }
   #sidenav-category {
-	  visibility: hidden;
+    visibility: hidden;
   }
 }
