--- a/views/post.handlebars
+++ b/views/post.handlebars
@@ -1,6 +1,6 @@
- {{!-- NAV PARTIAL --}}
+{{!-- NAV PARTIAL --}}
 <div class="nav">
-{{>nav}}
+  {{>nav}}
 </div>
 <br><br>
 
@@ -14,20 +14,20 @@
   {{!-- Body --}}
   <div class="container">
     <div class="row">
-     
+
       {{!-- Enter Post Form --}}
       <div class="col-8 offset-2">
         <h3 class="text-center topPost">Share Your Thoughts</h3>
         <form class="clearfix mb-4 mt-4" action="POST">
           <div class="form-group mb-4">
             <label class="text-light" for="post-text">Title</label>
-            <input type="text" id="post-text" class="form-control"
-              aria-describedby="post-text" placeholder="Post Title">
+            <input type="text" id="post-text" class="form-control" aria-describedby="post-text"
+              placeholder="Post Title">
           </div>
           <div class="form-group mb-4">
             <label class="text-light" for="post-description">Content</label>
-            <textarea class="form-control" id="post-description" rows="10"
-              aria-describedby="post-description" placeholder="Post Content"></textarea>
+            <textarea class="form-control" id="post-description" rows="10" aria-describedby="post-description"
+              placeholder="Post Content"></textarea>
           </div>
           <div class="form-group mb-4">
             <label class="text-light" for="post-category">Category</label>
