update text small and red

--- a/views/display-posts.handlebars
+++ b/views/display-posts.handlebars
@@ -31,18 +31,18 @@
             <p style= "overflow-wrap:break-word" class="card-text post-content"
               value="{{this.id}}">{{this.description}}</p>
 
-            <p>Created By:{{this.User.name}} </p>
-            <p>Posted At: {{setTime this.createdAt}}</p>
+            <p class="small-text">Created By:  {{this.User.name}} </p>
+            <p class="small-text">Posted At:  {{setTime this.createdAt}}</p>
 
           <div class = "counter">
-            <p>Popularity: {{this.counter}}</p>
+            <p class="small-text">Popularity:  {{this.counter}}</p>
           </div>
           </div>
         </div>
         {{/each}}
-      
+
 </div>
-      
+
 </div>
       </div>
       {{!-- End Show All Posts --}}
@@ -50,7 +50,7 @@
     </div>
   </div>
   {{!-- End Body --}}
-  
+
 
 </div>
 
