--- a/public/styles/styles.css
+++ b/public/styles/styles.css
@@ -26,7 +26,7 @@ body {
   font-size: 1.2rem;
   line-height: 1.3;
   margin: 0 auto 40px;
-  max-width: 400px;
+  /* max-width: 400px; */
   padding: 15px;
   position: relative;
 }
@@ -170,6 +170,10 @@ p.small-text {
   color: rgba(31, 79, 236, 0.8);
 }
 
+.nav-med-text {
+  font-size: 0.9rem;
+}
+
 
 /* ----------------------------
  Category Sidebar Nav
@@ -290,6 +294,9 @@ p.small-text {
     visibility: hidden;
     max-width: 2px;
   }
+  .speech-bubble {
+    max-width: 400px;
+  }
 }
 
 /* Bootstrap grid extra small < 768px */
@@ -310,6 +317,9 @@ p.small-text {
   #search-btn{
     visibility: visible;
     max-width: 100%;
+  }
+  .speech-bubble {
+    max-width: 400px;
   }
 }
 
