--- a/views/search-results.handlebars
+++ b/views/search-results.handlebars
@@ -15,7 +15,7 @@
     <div class="row">
 
       {{!-- Show All Posts --}}
-      <div class="col-8">
+      <div class="col-8 offset-2">
         {{!-- Iterate through 'posts' data item. --}}
         {{#each posts}}
         <div class="card mt-4">
