--- a/views/singlePost.handlebars
+++ b/views/singlePost.handlebars
@@ -28,7 +28,7 @@
               <p class="small-text"><strong>Author: </strong> {{response.post.name}} </p>
               <p class="small-text">Posted: {{setTime response.post.createdAt}}</p>
               <div class="voting red-text">
-                <i class="like fas fa-carrot fa-lg" value='{{response.post.id}}'></i>
+                <i style="color: orange" class="like fas fa-carrot fa-lg" value='{{response.post.id}}'></i>
                 <i class="hvr-sink dislike far fa-frown-open fa-lg" value='{{response.post.id}}'></i>
               </div>
             </div>
